--- a/Gymnasiearbete/Views/MainWindow.axaml
+++ b/Gymnasiearbete/Views/MainWindow.axaml
@@ -3,15 +3,10 @@
         xmlns:vm="using:Gymnasiearbete.ViewModels"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+		xmlns:views="clr-namespace:Gymnasiearbete.Views"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="Gymnasiearbete.Views.MainWindow"
         Icon="/Assets/avalonia-logo.ico"
         Title="Gymnasiearbete">
-
-    <Design.DataContext>
-        <vm:MainWindowViewModel/>
-    </Design.DataContext>
-
-    <TextBlock Text="{Binding Greeting}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-
+        <views:MainView/>
 </Window>
