--- a/Gymnasiearbete/Views/MainView.axaml
+++ b/Gymnasiearbete/Views/MainView.axaml
@@ -4,7 +4,6 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="Gymnasiearbete.Views.MainView">
-	<Canvas>
-		<Rectangle Fill="red" Canvas.Left="20" Canvas.Top="20" Width="100" Height="100"/>
+	<Canvas x:Name="MainCanvas">
 	</Canvas>
 </UserControl>
