--- a/Gymnasiearbete/Views/MainWindow.axaml
+++ b/Gymnasiearbete/Views/MainWindow.axaml
@@ -7,6 +7,6 @@
         mc:Ignorable="d" d:DesignWidth="400" d:DesignHeight="400"
         x:Class="Gymnasiearbete.Views.MainWindow"
         Icon="/Assets/avalonia-logo.ico"
-        Title="Gymnasiearbete">
-        <views:MainView/>
+        Title="Gymnasiearbete"
+		Content="{Binding Content}">
 </Window>
