--- a/Gymnasiearbete/Views/MainView.axaml
+++ b/Gymnasiearbete/Views/MainView.axaml
@@ -7,7 +7,8 @@
 	<Grid ColumnDefinitions="*, 200">
 		<Canvas x:Name="MainCanvas"
 				Grid.Column="0"
-				Grid.Row="0">
+				Grid.Row="0"
+				Background="White">
 		</Canvas>
 		<Border BorderBrush="Black"
 				BorderThickness="2"
@@ -21,6 +22,7 @@
 					<Button Command="{Binding Start}">Start</Button>
 					<Button Command="{Binding Stop}">Stop</Button>
 				</StackPanel>
+				<TextBlock Name="Coords"></TextBlock>
 			</StackPanel>
 		</Border>
 	</Grid>
